--- a/jenkins/build_pod.yaml
+++ b/jenkins/build_pod.yaml
@@ -4,6 +4,7 @@ metadata:
     labels:
       name: build-pod
 spec:
+  serviceAccountName: jenkins-my-bloody-jenkins
   containers:
       - name: maven
         image: maven:3.6.3-jdk-11
