Updated pod template with new cluster role

--- a/jenkins/build_pod.yaml
+++ b/jenkins/build_pod.yaml
@@ -4,7 +4,8 @@ metadata:
     labels:
       name: build-pod
 spec:
-  serviceAccountName: jenkins-my-bloody-jenkins
+  serviceAccountName: jenkins-sa
+  automountServiceAccountToken: true
   containers:
       - name: maven
         image: maven:3.6.3-jdk-11
