Rollback service account name

--- a/jenkins/build_pod.yaml
+++ b/jenkins/build_pod.yaml
@@ -4,8 +4,7 @@ metadata:
     labels:
       name: build-pod
 spec:
-  serviceAccountName: jenkins-sa
-  automountServiceAccountToken: true
+  serviceAccountName: jenkins-my-bloody-jenkins
   containers:
       - name: maven
         image: maven:3.6.3-jdk-11
