--- a/jenkins/service_account.yaml
+++ b/jenkins/service_account.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
     name: jenkins-sa
+    namespace: jenkins
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
