--- a/jenkins/service_account.yaml
+++ b/jenkins/service_account.yaml
@@ -26,6 +26,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: jenkins-sa
+  namespace: test
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -33,4 +34,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: jenkins-sa
+  namespace: jenkins
 
