--- a/jenkins/role_binding.yaml
+++ b/jenkins/role_binding.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: read-secrets
-  namespace: jenkins
+  namespace: test
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -10,5 +10,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: kube-system
+  namespace: jenkins
 
