--- a/jenkins/role_binding.yaml
+++ b/jenkins/role_binding.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   name: jenkins-pod-reader
+  namespace: jenkins
 rules:
 - apiGroups: [""]
   resources: ["pods"]
