--- a/jenkins/role_binding.yaml
+++ b/jenkins/role_binding.yaml
@@ -1,8 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
-  name: jenkins-pod-reader
-  namespace: jenkins
+  name: pod-reader
+  namespace: test
 rules:
 - apiGroups: [""]
   resources: ["pods"]
@@ -25,7 +25,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: jenkins-pod-reader
+  name: pod-reader
 subjects:
 - kind: ServiceAccount
   name: default
