--- a/jenkins/role_binding.yaml
+++ b/jenkins/role_binding.yaml
@@ -15,7 +15,7 @@ rules:
   verbs: ["get","list","watch"]
 - apiGroups: [""]
   resources: ["secrets"]
-  verbs: ["get"]
+  verbs: ["create","delete","get","list","patch","update","watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
