--- a/jenkins/role_binding.yaml
+++ b/jenkins/role_binding.yaml
@@ -19,6 +19,9 @@ rules:
 - apiGroups: [""]
   resources: ["services"]
   verbs: ["create","delete","get","list","patch","update","watch"]
+- apiGroups: ["apps"]
+  resources: ["deployments"]
+  verbs: ["get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
