--- a/helm/App/templates/svc.yaml
+++ b/helm/App/templates/svc.yaml
@@ -11,7 +11,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - protocol: http
-      port: 5000
+    - port: 5000
+      targetPort: 5000
+      nodePort: 30000
   selector:
     app: {{ template "fullname" . }}
