--- a/helm/App/templates/svc.yaml
+++ b/helm/App/templates/svc.yaml
@@ -9,10 +9,11 @@ metadata:
     heritage: {{ .Release.Service  | quote }}
     version: {{ .Values.image.tag | quote }}
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
-    - port: 5000
-      targetPort: 5000
+    - name: http
       nodePort: 30000
+      port: 5000
+      protocol: TCP
   selector:
     app: {{ template "fullname" . }}
