--- a/App/Dockerfile
+++ b/App/Dockerfile
@@ -1,6 +1,9 @@
-FROM python:3.6.1-alpine
+FROM python:3.7
+
+RUN mkdir /app
 WORKDIR /app
-ADD . /app
+ADD . /app/
 RUN pip install -r requirements.txt
-ENV FLASK_APP "app.py"
-CMD ["flask", "run"]
+
+EXPOSE 5000
+CMD ["python", "/app/main.py"]
