--- a/helm/App/templates/ingress.yaml
+++ b/helm/App/templates/ingress.yaml
@@ -13,4 +13,4 @@ spec:
         - backend:
             serviceName: {{ template "fullname" . }}
             servicePort: http
-          path: /testapp(/|$)(.*)
+          path: {{ .Values.path }}
