--- a/jenkins/build_pod.yaml
+++ b/jenkins/build_pod.yaml
@@ -6,14 +6,6 @@ metadata:
 spec:
   serviceAccountName: jenkins-my-bloody-jenkins
   containers:
-      - name: maven
-        image: maven:3.6.3-jdk-11
-        command:
-          - cat
-        tty: true
-        volumeMounts:
-          - name: m2
-            mountPath: /root/.m2
       - name: docker
         image: docker:19.03
         command:
@@ -25,6 +17,11 @@ spec:
             mountPath: /var/run/docker.sock
       - name: helm
         image: lachlanevenson/k8s-helm:latest
+        command:
+          - cat
+        tty: true
+      - name: python
+        image: r-whites/python-testing:latest
         command:
           - cat
         tty: true
